--- a/client/css/style.css
+++ b/client/css/style.css
@@ -2,7 +2,7 @@
  * ==|== normalize.css ==========================================================
  */
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section {
-  display: block;
+  display: inline-block;
 }
 
 audio, canvas, video {
@@ -207,6 +207,14 @@ button, input, select, textarea {
 button, input {
   line-height: normal;
   *overflow: visible;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 25px;
+    border: 1px solid black;
+    height: 50px;
+    width: 500px;
+    color: white;
+    font-size: 25px;
+
 }
 
 table button, table input {
@@ -310,6 +318,10 @@ body {
 	background-image:url('/img/quiz-app_bg_A.jpg');
 }
 
+#content, #main-content {
+    text-align: center;
+}
+
 #main-header hgroup h1{
 	 height:102px;
 	width:402px;
@@ -335,31 +347,32 @@ body {
 	background-image:url('/img/quiz-logo_A.png');
 	height:102px;
 	width:402px;
+    display: inline-block;
 }
 
 #loginName{
-	color:#fff;
-	float:left;
+    color: white;
+    margin-top: 20%;
 }
 
 #inputWrapper{
-	clear:both;
-	float:left;
 }
 
 #actions{
-	clear:both;
-	float:left;
+    width: 350px;
+    text-align: center;
+    display: inline-block;
+    margin-top: 10%;
 }
 
-#actions button,#resultActions button{
-	clear:both;
-	float:left;
+#actions button, #resultActions button{
 	color:#000000 ;
-	background-color: #999999;
+    background-color: rgba(255, 255, 255, 0.8);
 	border:2px solid #555555;
 	padding:10px;
 	margin:10px;
+    width: 320px;
+
 }
 
 .hide{
