--- a/client/js/app/templates/login.hbs
+++ b/client/js/app/templates/login.hbs
@@ -1,2 +1,11 @@
-<div>Enter your Name</div>
-<div><input type="text" /></div>
+<div id="loginHeader">
+	<div></div>
+</div>
+<div id="loginName">Enter your Name</div>
+<div id="inputWrapper">
+	<input type="text" />
+</div>
+<div id="actions">
+	<button id="startGame">Start Game</button>
+	<button id="help">Help</button>
+</div>
