implemented the i18n to the application

--- a/client/js/app/templates/help.hbs
+++ b/client/js/app/templates/help.hbs
@@ -1,3 +1,3 @@
 <div id="helpHeader"><div></div></div>
 <div id="helpText"></div>
-<div id="helpActions"><button id="startGame">Start Game</button>
+<div id="helpActions"><button id="startGame">QuizText.startGame</button>
