--- a/client/js/app/templates/quiz.hbs
+++ b/client/js/app/templates/quiz.hbs
@@ -2,12 +2,12 @@
 <div id="questionWrapper"></div>
 <div id="actionsWrapper">
 	<div class="quitButton">
-		<button>Quit</button>
+		<button>{{msg "QuizText.quit"}}</button>
 	</div>
 	<div class="nextButton">
-		<button>Next</button>
+		<button>{{msg "QuizText.next"}}</button>
 	</div>
 	<div class="passButton">
-		<button>Pass</button>
+		<button>{{msg "QuizText.pass"}}</button>
 	</div>
 </div>
