--- a/client/js/app/templates/result.hbs
+++ b/client/js/app/templates/result.hbs
@@ -1,3 +1,3 @@
 <div id="resultHeader"><div></div></div>
-<div id="scoreWrapper"><div id="scoreHeader">Your score</div><div id="score"><span></span></div></div>
-<div id="resultActions"><button id="restartGame">ReStart Game</button>
+<div id="scoreWrapper"><div id="scoreHeader">{{msg "QuizText.yourScore"}}</div><div id="score"><span></span></div></div>
+<div id="resultActions"><button id="restartGame">{{msg "QuizText.restartGame"}}</button>
