--- a/client/css/style.css
+++ b/client/css/style.css
@@ -311,7 +311,7 @@ td {
 }
 
 body {
-  font-family: "Helvetica", Arial, sans-serif;
+  font-family: "georgia","Helvetica", Arial, sans-serif;
 }
 
 .main-bg{
@@ -343,7 +343,7 @@ body {
     box-align: center;
 }
 
-#login-header div,#resultHeader div{
+#loginHeader div,#resultHeader div{
 	background-image:url('/img/quiz-logo_A.png');
 	height:102px;
 	width:402px;
@@ -352,10 +352,12 @@ body {
 
 #loginName{
     color: white;
-    margin-top: 20%;
+    font-size:16px;
+    margin-top: 10%;
 }
 
 #inputWrapper{
+	margin-top:1%;
 }
 
 #actions{
@@ -370,7 +372,7 @@ body {
     background-color: rgba(255, 255, 255, 0.8);
 	border:2px solid #555555;
 	padding:10px;
-	margin:10px;
+	margin:5px;
     width:320px;
 
 }
@@ -407,6 +409,7 @@ body {
 	color:#fff;
 	font-size:16pt
 	height:200px;
+	text-align:center;
 }
 
 
@@ -460,19 +463,31 @@ body {
     -moz-transform-origin: 50% 100%;
     transform: rotate(0deg);
     transform-origin: 50% 100%;
-
 }
-#timerWrapper{
 
-
-}
 #counter{
     color: #00DEFF;
     font-size: 16px;
 }
 
 #localeWrapper{
+	font-size: 16px;
+	margin-top:5%;
 	color: #fff;
 }
 
 
+#actionsWrapper div{
+	display:inline-block;
+}
+#actionsWrapper button{
+	width:200px;
+}
+
+#answersWrapper{
+	width:400px;
+}
+
+#quiz-content{
+	width:100%;
+}
