--- a/client/js/app/templates/login.hbs
+++ b/client/js/app/templates/login.hbs
@@ -2,7 +2,7 @@
 	<div></div>
 </div>
 <div id="localeWrapper">
-{{msg "QuizText.selectYourLanguage"}}: 
+{{msg "QuizText.selectYourLanguage"}}:
 <select>
 	<option selected value="en">{{msg "QuizText.english"}}</option>
 	<option value="ch">{{msg "QuizText.chinese"}}</option>
@@ -15,6 +15,6 @@
 	<input type="text" />
 </div>
 <div id="actions">
-	<button id="startGame">{{msg "QuizText.startGame"}}</button>
+	<button id="startGame" disabled="disaled">{{msg "QuizText.startGame"}}</button>
 	<button id="help">{{msg "QuizText.help"}}</button>
 </div>
