--- a/client/js/app/templates/quiz.hbs
+++ b/client/js/app/templates/quiz.hbs
@@ -1,13 +1,7 @@
 <div id="timerWrapper"></div>
 <div id="questionWrapper"></div>
-<div id="actionsWrapper">
-	<div class="quitButton">
-		<button>{{msg "QuizText.quit"}}</button>
-	</div>
-	<div class="nextButton">
-		<button>{{msg "QuizText.next"}}</button>
-	</div>
-	<div class="passButton">
-		<button>{{msg "QuizText.pass"}}</button>
-	</div>
+<div id="actionsWrapper">	
+		<button id="quitButton">{{msg "QuizText.quit"}}</button>	
+		<button id="nextButton">{{msg "QuizText.next"}}</button>
+		<button id="passButton">{{msg "QuizText.pass"}}</button>	
 </div>
