question logic improved

--- a/client/js/app/templates/quiz.hbs
+++ b/client/js/app/templates/quiz.hbs
@@ -2,6 +2,6 @@
 <div id="questionWrapper"></div>
 <div id="actionsWrapper">	
 		<button id="quitButton">{{msg "QuizText.quit"}}</button>	
-		<button id="nextButton">{{msg "QuizText.next"}}</button>
+		<button id="nextButton" disabled="disabled">{{msg "QuizText.next"}}</button>
 		<button id="passButton">{{msg "QuizText.pass"}}</button>	
 </div>
