validation for the button has been added

--- a/client/js/app/templates/login.hbs
+++ b/client/js/app/templates/login.hbs
@@ -15,6 +15,6 @@
 	<input type="text" />
 </div>
 <div id="actions">
-	<button id="startGame" disabled="disaled">{{msg "QuizText.startGame"}}</button>
+	<button id="startGame" disabled="disabled">{{msg "QuizText.startGame"}}</button>
 	<button id="help">{{msg "QuizText.help"}}</button>
 </div>
