--- a/client/js/app/templates/login.hbs
+++ b/client/js/app/templates/login.hbs
@@ -1,7 +1,7 @@
 <div id="loginHeader">
 	<div></div>
 </div>
-<div id="localeWrapper">
+<!--div id="localeWrapper">
 {{msg "QuizText.selectYourLanguage"}}:
 <select>
 	<option selected value="en">{{msg "QuizText.english"}}</option>
@@ -9,7 +9,7 @@
 	<option value="ge">{{msg "QuizText.german"}}</option>
 	<option value="sp">{{msg "QuizText.spanish"}}</option>
 </select>
-</div>
+</div-->
 <div id="loginName">{{msg "QuizText.enterYourName"}}</div>
 <div id="inputWrapper">
 	<input type="text" />
