--- a/client/js/app/templates/question.hbs
+++ b/client/js/app/templates/question.hbs
@@ -1,3 +1,3 @@
-<div id="questionDetails"><div class="index"></div><div class="weight">weight:</div></div>
-<div id="question"></div>
+<div id="questionDetails"><span class="index"></span><span class="weight">weight:</span></div>
+<p id="question"></p>
 <div id="answersWrapper"></div>
