--- a/client/css/style.css
+++ b/client/css/style.css
@@ -353,7 +353,7 @@ body {
 
 #loginName{
     color: white;
-    font-size:16px;
+    font-size:20px;
     margin-top: 10%;
 }
 
@@ -547,4 +547,15 @@ button:disabled{
 
  #imageWrapper img{
          height: 175px;
+ }
+ #resultActions{
+ 	width:60%;
+ 	display:inline-block;
+ 	text-align: center;
+ 	margin-left:36%;
+ }
+ #resultActions button{
+ 		clear:both;
+ 		display:block;
+ 		margin-top:1%;
  }
