--- a/client/js/app/templates/result.hbs
+++ b/client/js/app/templates/result.hbs
@@ -1,3 +1,6 @@
 <div id="resultHeader"><div></div></div>
 <div id="scoreWrapper"><h2 id="scoreHeader">Congratulations!</h2><h3 id="scoreHeader">{{msg "QuizText.yourScore"}}</h3><h3 id="score"></h3></div>
-<div id="resultActions"><button id="restartGame">{{msg "QuizText.restartGame"}}</button>
+<div id="resultActions">
+	<button id="playAgain">{{msg "QuizText.playAgain"}}</button>
+	<button id="restartGame">{{msg "QuizText.restartGame"}}</button>
+</div>
